# island_detector

./: .gitignore  CMakeLists.txt  README.md
include/: island_detector.h
python/: requirements.txt  visualize.py
src/: island_detector.cpp  main.cpp
